[gd_scene load_steps=10 format=2]

[ext_resource path="res://models/pieces/LeftBottomPiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/frontier/Frontier.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/pieces/RightBottomPiece.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/pieces/LeftTopPiece.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/puzzle/PuzzleBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://games/puzzle.gd" type="Script" id=6]
[ext_resource path="res://models/pieces/RightTopPiece.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/puzzle_player/PlayerPuzzle.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/puzzle_player/black_spatialmaterial.tres" type="Material" id=9]

[node name="Puzzle" type="Spatial"]
script = ExtResource( 6 )

[node name="PuzzleBoard" parent="." instance=ExtResource( 5 )]

[node name="LeftBottomPiece" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0 )

[node name="RightBottomPiece" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0 )

[node name="RightTopPiece" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )

[node name="LeftTopPiece" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0 )

[node name="Borders" type="Spatial" parent="."]

[node name="FrontierBottom" parent="Borders" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.92268, 4.05553 )

[node name="FrontierFront" parent="Borders" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.19302 )

[node name="Player" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.14158, 2.49357 )
player_material = ExtResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.292032, 4.37928 )
[connection signal="player_rotate_figure" from="Player" to="." method="_on_Player_player_rotate_figure"]
[connection signal="player_set_figure" from="Player" to="." method="_on_Player_player_set_figure"]

[editable path="PuzzleBoard"]
